# lorentz

./: .dir-locals.el  .gitignore  CMakeLists.txt  Cargo.toml
cpp/: .dir-locals.el  CMakeLists.txt
cpp/src/: bvh.cpp  bvh.h  camera.h  config.h  material.cpp  material.h  primitive.cpp  primitive.h  primitive_trait.h  random.cpp  random.h  ref_scene_1.cpp  scene.h  tile.h  tracer.cpp  tracer.h  vec3.h
rust/src/: bvh.rs  camera.rs  config.rs  main.rs  material.rs  primitive.rs  primitive_traits.rs  ray.rs  ref_scene_0.rs  ref_scene_1.rs  scene.rs  tile.rs  tracer.rs  vec3.rs
rust/src/geometry/: bvh.rs  primitive.rs  primitive_traits.rs
rust/src/render/: tracer.rs
rust/src/scene/: camera.rs  scene.rs
src/: bvh.cpp  bvh.h  camera.cpp  camera.h  main.cpp  main.rs  material.h  material.rs  primitive.h  primitive.rs  primitive_trait.cpp  ray.h  ray.rs  ref_scene_1.cpp  ref_scene_1.h  ref_scene_1.rs  scene.h  tile.cpp  tracer.h  tracer.rs  utils.h  vec3.cpp  vec3.rs
src/geometry/: mod.rs  ray.rs  vec3.rs
src/material/: material.rs  mod.rs
src/render/: mod.rs  raw.rs  tile.rs  tracer.rs
src/scene/: mod.rs
src/texture/: mod.rs  texture.rs
